Partly fixed Spark issues with new versions, WIP